chore: swagger disabled on release mode
